--- a/css/leaflet1.css
+++ b/css/leaflet1.css
@@ -476,7 +476,8 @@ a {
 #Podsumowanie, #Podsumowanie_tot, #Podsumowanie_mean{
 	/*border-top-left-radius: 32px !important;
 	table-layout: fixed;*/
-	/*margin: 16px auto !important;*/
+	margin-left: auto;
+	margin-right: auto;
 	display: table !important;
 }
 #Podsumowanie2{
@@ -1287,6 +1288,7 @@ a {
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.2s cubic-bezier(.25,.8,.25,1);
 	font-size: 14px;
+	text-transform: uppercase;
 	padding: 4px 4px 4px 4px;
 	background-image: linear-gradient(to right, #e6f5d0 0%, #f7f7f7 51%, #e6f5d0 100%);
 	}
@@ -1846,11 +1848,17 @@ a {
   border-right: 8px solid transparent;
   border-left: 8px solid transparent;
 }
+
 .ppod{
 	color: #202020;
-	font-size: 8px;
+	font-size: 7px;
 	/*text-align: right;*/
 }
+
+/*.ToUpper{
+	text-transform: uppercase;
+}*/
+
 .category{
 	margin: 8px 0px 2px 0px;
 	padding: 0px 0px 0px 8px;
